--- a/index.html
+++ b/index.html
@@ -6,6 +6,45 @@
   <title>Home | mkl0st</title>
 </head>
 <body>
+  <ul>
+    <li>
+      <a href="/">Home</a>
+    </li>
+  </ul>
   <h1>mkl0st</h1>
+  <h2>Technologies</h2>
+  <h3>Programming Languages</h2>
+  <ul>
+    <li>JavaScript</li>
+    <li>TypeScript</li>
+    <li>C++</li>
+    <li>C</li>
+    <li>PHP</li>
+  </ul>
+  <h3>Libraries</h3>
+  <ul>
+    <li>React</li>
+    <li>React Native</li>
+    <li>Express</li>
+  </ul>
+  <h3>Database</h3>
+  <ul>
+    <li>PostgreSQL</li>
+    <li>MySQL</li>
+    <li>Firebase</li>
+  </ul>
+  <h3>Tools</h3>
+  <ul>
+    <li>CMake</li>
+  </ul>
+  <h2>Languages</h2>
+  <ul>
+    <li>Czech — Native</li>
+    <li>English — Advanced</li>
+  </ul>
+  <footer>
+    <hr>
+    <p>mkl0st &copy; 2024</p>
+  </footer>
 </body>
 </html>
