--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home | mkl0st</title>
+  <!-- Icons -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
 </head>
 <body>
   <ul>
@@ -15,27 +17,63 @@
   <h2>Technologies</h2>
   <h3>Programming Languages</h2>
   <ul>
-    <li>JavaScript</li>
-    <li>TypeScript</li>
-    <li>C++</li>
-    <li>C</li>
-    <li>PHP</li>
+    <li>
+      <span><i class="devicon-javascript-plain"></i></span>
+      <span>JavaScript</span>
+    </li>
+    <li>
+      <span><i class="devicon-typescript-plain"></i></span>
+      <span>TypeScript</span>
+    </li>
+    <li>
+      <span><i class="devicon-cplusplus-plain"></i></span>
+      <span>C++</span>
+    </li>
+    <li>
+      <span><i class="devicon-c-plain"></i></span>
+      <span>C</span>
+    </li>
+    <li>
+      <span><i class="devicon-php-plain"></i></span>
+      <span>PHP</span>
+    </li>
   </ul>
   <h3>Libraries</h3>
   <ul>
-    <li>React</li>
-    <li>React Native</li>
-    <li>Express</li>
+    <li>
+      <span><i class="devicon-react-original"></i></span>
+      <span>React</span>
+    </li>
+    <li>
+      <span><i class="devicon-react-original"></i></span>
+      <span>React Native</span>
+    </li>
+    <li>
+      <span><i class="devicon-express-original"></i></span>
+      <span>Express</span>
+    </li>
   </ul>
   <h3>Database</h3>
   <ul>
-    <li>PostgreSQL</li>
-    <li>MySQL</li>
-    <li>Firebase</li>
+    <li>
+      <span><i class="devicon-postgresql-plain"></i></span>
+      <span>PostgreSQL</span>
+    </li>
+    <li>
+      <span><i class="devicon-mysql-original"></i></span>
+      <span>MySQL</span>
+    </li>
+    <li>
+      <span><i class="devicon-firebase-plain"></i></span>
+      <span>Firebase</span>
+    </li>
   </ul>
   <h3>Tools</h3>
   <ul>
-    <li>CMake</li>
+    <li>
+      <span><i class="devicon-cmake-plain"></i></span>
+      <span>CMake</span>
+    </li>
   </ul>
   <h2>Languages</h2>
   <ul>
